@@ -92,6 +92,7 @@
     <module>tajo-pullserver</module>
     <module>tajo-dist</module>
     <module>tajo-thirdparty/asm</module>
+    <module>tajo-cli</module>
   </modules>
 
   <build>
