@@ -18,8 +18,8 @@
 
 package org.apache.tajo.cli.tsql.commands;
 
-import org.apache.tajo.cli.tsql.TajoCli;
 import org.apache.tajo.cli.tools.TajoHAAdmin;
+import org.apache.tajo.cli.tsql.TajoCli;
 
 public class TajoHAAdminCommand extends TajoShellCommand {
   private TajoHAAdmin haAdmin;
