@@ -18,9 +18,9 @@
 
 package org.apache.tajo.cli.tsql.commands;
 
-import org.apache.tajo.cli.tsql.TajoCli;
 import org.apache.tajo.client.TajoClient;
 import org.apache.tajo.conf.TajoConf;
+import org.apache.tajo.cli.tsql.TajoCli;
 
 public abstract class TajoShellCommand {
   public abstract String getCommand();
